--- a/assets/style.css
+++ b/assets/style.css
@@ -11,18 +11,21 @@ body {
     align-items: center;
     flex-wrap: wrap;
 }
+
 .card-container {
     min-width: 15vw;
-    max-width: 300px;
+    max-width: 300px; 
+    min-height: 300px;
+    height: 500px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    padding: 1.5em 2.5em;
+    padding: 1.5em;
     margin: 0 15px;
     box-sizing: border-box;
-    min-height: 300px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
@@ -32,6 +35,7 @@ body {
     object-fit: cover;
     border-radius: 50%;
 }
+
 .user-position {
     font-family: 1.1em;
     font-weight: 800;
@@ -92,4 +96,9 @@ svg {
 
 .user-status {
     margin-top: 1em;
+}
+.shadow {
+    -webkit-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+    box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
 }
