--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,7 @@ body {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    padding: 1.5em;
+    padding: 1em;
     margin: 0 15px;
     box-sizing: border-box;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
@@ -34,6 +34,16 @@ body {
     height: 100px;
     object-fit: cover;
     border-radius: 50%;
+}
+.star {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: inline-block;
+    margin-top: -20px;
+    object-fit: cover;
+    padding: 5px;
+    background-color: white;
 }
 
 .user-position {
